<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginMaestro">

    <TextView
        android:id="@+id/txtvTittle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="32dp"
        android:hint="@string/txtvTittle"
        android:textColorHint="#363738"
        android:textSize="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLine3"
        android:layout_width="300dp"
        android:layout_height="10dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#8792a1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvTittle2" />


    <View
        android:id="@+id/view"
        android:layout_width="300dp"
        android:layout_height="463dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/roundviews"
        android:backgroundTint="#808181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLine3"


        />

    <TextView
        android:id="@+id/txtvusuario"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="484dp"
        android:hint="@string/txtvusuario"
        android:textAlignment="center"
        android:textColorHint="#363738"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="232dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="392dp"
        android:background="@drawable/roundtxt"
        android:hint="@string/txtUserName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="344dp"
        android:hint="@string/txtvPassword"
        android:textColorHint="#363738"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="232dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/roundtxt"
        android:hint="@string/txtPasswors"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtvpassolvidada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="216dp"
        android:hint="@string/txtvOlvisadetuPassword"
        android:textColorHint="#363738"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#1d64c2"
        android:hint="@string/btnIniciarSesion"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        app:cornerRadius="90px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>